--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,3 +8,5 @@ slick.dbs.default.db.password="postgres"
 slick.dbs.default.db.connectionTimeout=5s
 slick.dbs.default.db.numThreads=20
 slick.dbs.default.db.maxConnections=20
+
+play.modules.enabled += "modules.injection"
